Update book layout: Add cover image display with authors below
- Remove author metadata from _quarto.yml book section
- Add centered cover image (50% width) at top of index.qmd
- Add centered author list below cover image
- Add CSS rule to hide redundant title text on home page
- Keep title in YAML for HTML metadata/SEO purposes

--- a/custom.css
+++ b/custom.css
@@ -42,3 +42,8 @@ figure > figcaption,
 .code-caption {
   text-align: left !important;
 }
+
+/* Hide the book title text on home page (cover image is shown instead) */
+.quarto-title .title {
+  display: none;
+}
