Fix title display suppression and add .nojekyll to resources
- Add .nojekyll to resources list in _quarto.yml
- Set empty title in index.qmd YAML frontmatter
- Add multiple CSS selectors to ensure title is hidden
- Combine YAML and CSS approaches for robust title suppression

--- a/custom.css
+++ b/custom.css
@@ -42,3 +42,17 @@ figure > figcaption,
 .code-caption {
   text-align: left !important;
 }
+
+/* Hide the book title on the index/home page */
+#quarto-document-content > header > h1.title {
+  display: none !important;
+}
+
+/* Alternative selectors for hiding title */
+.quarto-title-block .title {
+  display: none !important;
+}
+
+header#title-block-header h1.title {
+  display: none !important;
+}
